hphp/hack/test/typecheck/reactive/rx_if_implements29.php.exp
File "rx_if_implements29.php", line 7, characters 19-27:
Conditionally reactive method with condition type '\Rx1' cannot be called. Calling such methods is allowed only from conditionally reactive methods with the same condition type or if static type of method receiver is a subtype of condition type, now '\I'. (Typing[4225])
